# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: audit.yml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
